<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="360dp"
    android:layout_height="400dp"
    android:background="#1E1E1E"
    android:padding="5dp"
    android:layout_gravity="center">


    <TextView
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Name"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IIT_no"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/plagarism"
        android:textAlignment="center"
        android:textColor="@color/white" />
</LinearLayout>