<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <ImageView

        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/my_project_1__3_"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/newgame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/pill_shape"
            android:text="@string/new_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/button1"
            android:background="@drawable/pill_shape"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            app:layout_constraintEnd_toEndOf="@+id/newgame"
            app:layout_constraintTop_toBottomOf="@id/newgame"
            app:layout_constraintStart_toStartOf="@id/newgame"
            android:layout_marginTop="25sp"/>
        <Button
            android:id="@+id/button2"
            android:background="@drawable/pill_shape"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/faq"
            app:layout_constraintEnd_toEndOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@id/button1"
            app:layout_constraintStart_toStartOf="@id/button1"
            android:layout_marginTop="25sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:text="@string/dicebattle"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/trademark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        />


    <TextView
        android:id="@+id/trademark"
        android:text="@string/designed_by_almaz_numan"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>